# fosslim

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: document.rs  finger_ngram.rs  index.rs  jaccard.rs  lib.rs  minhash.rs  naive_tf.rs  score.rs  shingler.rs  tokenizer.rs
tests/: check_test_files.rs  cross_check_test.rs  document_bench_test.rs  document_test.rs  finger_ngram_bench_test.rs  finger_ngram_cross_check_test.rs  finger_ngram_test.rs  index.rs  index_test.rs  jaccard_bench_test.rs  jaccard_test.rs  naive_tf_bench_test.rs  naive_tf_cross_check_test.rs  naive_tf_test.rs  score_test.rs  tokenizer_test.rs
tests/fixtures/files/: mit.txt  mit_julia.txt
tests/fixtures/test_licenses/: apache2_1.json  bsd3_1.json  bsd3_2.json  mit_1.json  mit_2.json  mit_3.json
