[package]
name    = "fosslim"
version = "0.0.1-pre"
authors = ["Timo Sulg <timo@versioneye.com>"]
description = "A License matcher for the FOSS licenses;"
keywords  = ["FOSS", "license", "SPDX"]
license   = "MIT"

[dependencies]
serde           = "~ 1.0.11"
serde_derive    = "~ 1.0.11"
serde_json      = "~ 1.0.0"
rmp-serde       = "~ 0.13.6"

[lib]
name    = "fosslim"
path    = "src/lib.rs"
test    = true
plugin  = true
