[package]
name    = "fosslim"
version = "0.0.2"
authors = ["Timo Sulg <timo@sulg.dev>"]
description = "A License matcher for the FOSS licenses;"
keywords  = ["FOSS", "license", "SPDX"]
license   = "MIT"
repository = "https://github.com/Fosslim/fosslim"

[dependencies]
serde_json      = "~ 1.0.0"
#rmp-serde       = "~ 0.13.6"
seahash         = "~ 3.0.5"

[lib]
name    = "fosslim"
path    = "src/lib.rs"
test    = true
plugin  = true
crate-type = ["rlib", "dylib"]
